# DigitalCoherentSystemSimulator

./: .gitignore  6_digitalcoherentsystem_dp_fiber_solved.py  README.md  pyproject.toml  requirements.txt
docs/: README.md
src/: DAC_Nyquist.py  DPQAM_receiver.py  DPQAM_transmitter.py  EDFA.py  HybridNetwork.py  MZM.py  QAM_dem.py  QAM_mod.py  QAM_receiver.py  QAM_receiver_DP.py  QAM_transmitter.py  __init__.py  constellation_analysis.py  fiber.py  fiber_with_pmd.py  main.py  optical_filter.py  photodiode.py  single_frequency_laser.py  spectrum_analysis.py  test.py  test2.py
src/digital_coherent_sim/: __init__.py  channel.py  graphics.py  receiver.py  transmitter.py  utils.py
src/digital_coherent_sim/channels/: __init__.py  channel.py
src/digital_coherent_sim/channels/edfa/: __init__.py  amplifier.py
src/digital_coherent_sim/graphics/: __init__.py  visualization.py
src/digital_coherent_sim/rx/: __init__.py  receiver.py
src/digital_coherent_sim/tx/: __init__.py  transmitter.py
tests/: test_api_compatibility.py  test_core_modules.py  test_original_vs_modular.py  test_refactoring_consistency.py
