[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-coherent-system-simulator"
version = "0.1.0"
description = "A modular digital coherent communication system simulator"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Digital Coherent System Simulator Contributors" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
